syntax = "proto3";

package protocols;

message FindNode {
    bytes guid = 1;
    uint32 version = 2;
    bytes ip = 3;
    uint32 port = 4;
    bytes targetGuid = 5;
}